--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_messaging: 14.6.5
+  flutter_local_notifications: 15.1.0
   firebase_core: 2.15.0
 
 
